--- a/pbsite/local_settings.template
+++ b/pbsite/local_settings.template
@@ -40,3 +40,9 @@ SITE_ID = 1
 # If you set this to False, Django will make some optimizations so as not
 # to load the internationalization machinery.
 USE_I18N = False
+
+# Make this unique, and don't share it with anybody.
+SECRET_KEY = 'zv$+w7juz@(g!^53o0ai1u082)=jkz9my_r=3)fglrj5t8l$2#'
+
+# IP Addresses that should be treated as internal/debug users
+INTERNAL_IPS = ('127.0.0.1',)
