moved MEDIA_URLS to local_settings in case a local install needs different settings.
Former-commit-id: ffc1e6801c79e24452bccb59be7afe437702e816
Former-commit-id: 7eb685f2977c302219c33f01da5a4f511967a10a
Former-commit-id: 9943eb252989f99879d332bb06cad95289ffe787

--- a/pbsite/local_settings.template
+++ b/pbsite/local_settings.template
@@ -14,6 +14,22 @@ ADMINS = (
     # ('Your Name', 'your_email@domain.com'),
 )
 
+# Absolute path to the directory that holds media.
+# Example: "/home/media/media.lawrence.com/"
+MEDIA_ROOT = PROJECT_PATH + '/media/'
+MEDIA_COVERS = MEDIA_ROOT + "/covers/"
+MEDIA_AWARDS = MEDIA_ROOT + "/awards/"
+
+# URL that handles the media served from MEDIA_ROOT. Make sure to use a
+# trailing slash if there is a path component (optional in other cases).
+# Examples: "http://media.lawrence.com", "http://example.com/media/"
+MEDIA_URL = '/media/'
+
+# URL prefix for admin media -- CSS, JavaScript and images. Make sure to use a
+# trailing slash.
+# Examples: "http://foo.com/media/", "/media/".
+ADMIN_MEDIA_PREFIX = '/media/admin/'
+
 # Local DB settings. Eventually, need to break these out.
 DATABASE_ENGINE = 'mysql'           # 'postgresql_psycopg2', 'postgresql', 'mysql', 'sqlite3' or 'oracle'.
 DATABASE_NAME = 'pb2'             # Or path to database file if using sqlite3.
