--- a/devscripts/wsgi/webfaction/httpd.conf
+++ b/devscripts/wsgi/webfaction/httpd.conf
@@ -1,4 +1,4 @@
-ServerRoot "/home/cyface/webapps/pb2/apache2"
+ServerRoot "/home/<username>/webapps/pb2/apache2"
 
 LoadModule dir_module modules/mod_dir.so
 LoadModule env_module modules/mod_env.so
@@ -15,4 +15,4 @@ CustomLog logs/access_log combined
 ServerLimit 2
 
 SetEnvIf X-Forwarded-SSL on HTTPS=1
-WSGIScriptAlias / /home/cyface/webapps/pb2/pb2.wsgi
+WSGIScriptAlias / /home/<username>/webapps/pb2/pb2.wsgi
