--- a/pbsite/local_settings.template
+++ b/pbsite/local_settings.template
@@ -14,6 +14,12 @@ PROJECT_PATH = os.path.abspath(os.path.dirname(__file__))
 DEBUG = True
 TEMPLATE_DEBUG = DEBUG
 
+# Cache Settings
+# CACHE_BACKEND = 'memcached://127.0.0.1:11211/'
+CACHE_BACKEND = 'dummy:///'
+CACHE_MIDDLEWARE_SECONDS = 30
+CACHE_MIDDLEWARE_ANONYMOUS_ONLY = True
+
 ADMINS = (
     # ('Your Name', 'your_email@domain.com'),
 )
