First cut at search implementation.
Former-commit-id: be84d429618f48da13ff4d6976cacdf8eaaf4f9a
Former-commit-id: eae71d980ad5d7d48df75e6ec3f858a6ae0adaea
Former-commit-id: b7ce7d4d5db11a2f8a28a41edb0d2c965da9463d
Former-commit-id: f56a1f7491afdb4335e8c31ae2053bb63614c8aa

--- a/pbsite/local_settings.template
+++ b/pbsite/local_settings.template
@@ -84,9 +84,9 @@ SERVER_EMAIL = 'a real email address'
 
 ### Search
 
-# SEARCH_PROVIDER = 
+SEARCH_PROVIDER = 'DEFAULT'
 
 # Sphinx
-# SEARCH_PROVIDER = SPHINX
+# SEARCH_PROVIDER = 'SPHINX'
 # SPHINX_SERVER = 'localhost'
 # SPHINX_PORT = 3312
