--- a/pbsite/local_settings.template
+++ b/pbsite/local_settings.template
@@ -40,16 +40,25 @@ MEDIA_URL = '/media/'
 # Examples: "http://foo.com/media/", "/media/".
 ADMIN_MEDIA_PREFIX = '/media/admin/'
 
-# Local DB settings. Eventually, need to break these out.
-DATABASE_ENGINE = 'mysql'           # 'postgresql_psycopg2', 'postgresql', 'mysql', 'sqlite3' or 'oracle'.
-DATABASE_NAME = 'pb2'             # Or path to database file if using sqlite3.
-DATABASE_USER = 'root'             # Not used with sqlite3.
-DATABASE_PASSWORD = 'password'         # Not used with sqlite3.
-DATABASE_HOST = '127.0.0.1'             # Set to empty string for localhost. Not used with sqlite3.
-DATABASE_PORT = ''             # Set to empty string for default. Not used with sqlite3.
-DATABASE_OPTIONS = {
-   "init_command": "SET storage_engine=INNODB",
-}
+# Local DB settings. (Postgres)
+DATABASE_ENGINE = 'postgresql_psycopg2'          # 'postgresql_psycopg2', 'postgresql'
+DATABASE_NAME = 'pb2'
+DATABASE_USER = 'root'
+DATABASE_PASSWORD = 'password'
+DATABASE_HOST = '127.0.0.1'
+DATABASE_PORT = ''					# Set to empty string for default.
+
+# Local DB settings. (MySQL)
+# DATABASE_ENGINE = 'mysql'
+# DATABASE_NAME = 'pb2'
+# DATABASE_USER = 'root'
+# DATABASE_PASSWORD = 'password'
+# DATABASE_HOST = '127.0.0.1'
+# DATABASE_PORT = ''             		# Set to empty string for default.
+# DATABASE_OPTIONS = {
+#    "init_command": "SET storage_engine=INNODB",
+# }
+
 # Local time zone for this installation. Choices can be found here:
 # http://en.wikipedia.org/wiki/List_of_tz_zones_by_name
 # although not all choices may be available on all operating systems.
