Added local overrides for middleware and template context.
Former-commit-id: ee901907289078c332bc9fb35daee1dd5462504a
Former-commit-id: 12436feef4a15d885998c2ebc654c735d4882583
Former-commit-id: fcbe515a1d6cff4b82b4c59ae5659a8412f3416b
Former-commit-id: e10aabad5415c8f308bc906e814eb02795cdc6e5

--- a/pbsite/local_settings.template
+++ b/pbsite/local_settings.template
@@ -89,6 +89,13 @@ EMAIL_HOST_PASSWORD = 'your_mailbox_password'
 DEFAULT_FROM_EMAIL = 'a real email address'
 SERVER_EMAIL = 'a real email address'
 
+# django-registration Settings
+ACCOUNT_ACTIVATION_DAYS = 14
+
+# Local add-ons to main variables
+LOCAL_MIDDLEWARE_CLASSES = None
+LOCAL_TEMPLATE_CONTEXT_PROCESSORS = None
+
 ##### PB2 Custom Variables Below Here #######
 
 ### Search
