--- a/pbsite/local_settings.template
+++ b/pbsite/local_settings.template
@@ -106,3 +106,4 @@ SEARCH_PROVIDER = 'DEFAULT'
 # SEARCH_PROVIDER = 'SPHINX'
 # SPHINX_SERVER = 'localhost'
 # SPHINX_PORT = 3312
+# SPHINX_API_VERSION = 0x116
