Updated to exclude zc.buildout stuff.
Former-commit-id: 64d5aa05f774d757dcd0448f7cb1cbe60367f085
Former-commit-id: eba9240040c78193555473e1dc6fb97b9c30ba5f
Former-commit-id: df45fb2c3dcb41f6e5df40bf02ded2e4179400b6
Former-commit-id: 0d7a5b8244740b6e75a632cae6022ef0d38c76cb
Former-commit-id: 7f0facf961f2b944f298c6a1fbb914bf6348465c

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,14 @@
 # *~
 *.pyc
 *.log
+*.pyo
+.installed.cfg
+bin
+develop-eggs
+dist
+downloads
+eggs
+parts
+src/*.egg-info
+local_settings.py
+settings_local.py
