Updated to include zc.buildout stuff.
Former-commit-id: e30b01512da3d9682587dda3e1798e25a2e64e27
Former-commit-id: 7a4e5ced6018c5887743cedeb3ec2b2ebf8e7efd
Former-commit-id: 281669089808c150962579c4d834b3de45dd1b0c
Former-commit-id: 255f19cb596167608818a29b18862c3132a4098e
Former-commit-id: 38dc8434e831409eb98faed42437661e6baaa9f0

--- a/src/.gitignore
+++ b/src/.gitignore
@@ -4,15 +4,5 @@
 # exclude patterns (uncomment them if you want to use them):
 # *.[oa]
 # *~
-*.pyc
-*.log
-*.pyo
-.installed.cfg
-bin
-develop-eggs
-dist
-downloads
-eggs
-parts
-src/*.egg-info
+settings_local.py
 local_settings.py
