Added new Install directions, updated buildout to include local stuff correctly.

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,6 +1,7 @@
 [buildout]
 parts = python
-		django 
+		django
+		pydev
 develop = .
 eggs =	podiobooks
 		django-authopenid
@@ -9,7 +10,6 @@ eggs =	podiobooks
 		python-openid
 		docutils
 		httplib2
-#		eyeD3   #Seems to be broken in pypi
 
 [python]
 recipe = zc.recipe.egg
@@ -21,8 +21,13 @@ recipe = djangorecipe
 version = 1.1.1
 project = podiobooks
 projectegg = podiobooks
-settings = settings_test
-test = podiobooks
+settings = settings
+test = podiobooks_test
 wsgi = true
 eggs = ${buildout:eggs}
+extra-paths = ${buildout:directory}/eggs-local/eyeD3.egg
 
+[pydev]
+recipe = pb.recipes.pydev
+eggs = ${buildout:eggs}
+extra_paths = ${django:extra-paths}
