--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,22 +1,29 @@
 [buildout]
 parts = python
-		django
+		podiobooks
 		pydev
 develop = .
 eggs =	podiobooks
 		django-authopenid
 		django-sphinx
 		django-tinymce
-		python-openid
 		docutils
+		feedparser
 		httplib2
+		psycopg2
+		python-openid
 
 [python]
 recipe = zc.recipe.egg
 interpreter = python
 eggs = ${buildout:eggs}
 
-[django]
+[PIL]
+recipe = zc.recipe.egg:custom
+egg = PIL
+find-links = http://dist.repoze.org/
+
+[podiobooks]
 recipe = djangorecipe
 version = 1.1.1
 project = podiobooks
@@ -30,4 +37,4 @@ extra-paths = ${buildout:directory}/eggs-local/eyeD3.egg
 [pydev]
 recipe = pb.recipes.pydev
 eggs = ${buildout:eggs}
-extra_paths = ${django:extra-paths}
+extra_paths = ${podiobooks:extra-paths}
