Updated middleware to use the latest practices around ordering.
Former-commit-id: 2ad64f48e86ae4890c1b19778ee2da1e6454045a
Former-commit-id: cca06006bb6d170b724152c059532c3264937d04
Former-commit-id: 7bd4bba80bad14d8b3818461436dabf80c860bf9
Former-commit-id: 07f56a28bea3ae05d813cc0ad00a1ab1c515a554
Former-commit-id: 556eb8daa72d31daf311a4410e3ee2ee4bd50fc1
Former-commit-id: 4d12778b177be02e00b305fcf06e042f2e103e53

--- a/src/podiobooks/settings_local.template
+++ b/src/podiobooks/settings_local.template
@@ -19,6 +19,7 @@ TEMPLATE_DEBUG = DEBUG
 CACHE_BACKEND = 'dummy:///'
 CACHE_MIDDLEWARE_SECONDS = 30
 CACHE_MIDDLEWARE_ANONYMOUS_ONLY = True
+CACHE_MIDDLEWARE_KEY_PREFIX = 'pb2'
 
 ADMINS = (
     # ('Your Name', 'your_email@domain.com'),
