--- a/src/podiobooks/settings_local.template
+++ b/src/podiobooks/settings_local.template
@@ -14,6 +14,8 @@ PROJECT_PATH = os.path.abspath(os.path.dirname(__file__))
 DEBUG = True
 TEMPLATE_DEBUG = DEBUG
 
+# TEMPLATE_THEME = 'tim1'
+
 # Cache Settings
 # CACHE_BACKEND = 'memcached://127.0.0.1:11211/'
 CACHE_BACKEND = 'dummy:///'
