Changed base to be at the root of /templates, it's not really a theme.
Former-commit-id: 501614a3389fe63bb0c283447049c329342c0dca
Former-commit-id: ae275709f654b73537b1a1cb101e39024291f2cf
Former-commit-id: 448d9fab14a6cbef0abb53335444e019dccf7573
Former-commit-id: 49151f8b016e6286b122598c9aa5d6f8e82f1038
Former-commit-id: 561995afa106f2927c023a6004688b606877d997
Former-commit-id: 8d6144d10a614a18e63cfe0b35a28312da37908d

--- a/src/podiobooks/settings_local.template
+++ b/src/podiobooks/settings_local.template
@@ -14,7 +14,7 @@ PROJECT_PATH = os.path.abspath(os.path.dirname(__file__))
 DEBUG = True
 TEMPLATE_DEBUG = DEBUG
 
-# TEMPLATE_THEMES = ('tim1', 'legacy')
+# TEMPLATE_THEMES = ('tim1', 'legacy',)
 
 # Cache Settings
 # CACHE_BACKEND = 'memcached://127.0.0.1:11211/'
