--- a/src/podiobooks/settings_local.template
+++ b/src/podiobooks/settings_local.template
@@ -38,6 +38,9 @@ MEDIA_AWARDS = MEDIA_ROOT + "/awards/"
 # Examples: "http://media.lawrence.com", "http://example.com/media/"
 MEDIA_URL = '/media/'
 
+# URL that is used to fetch the covers for the titles
+COVER_MEDIA_URL = MEDIA_URL
+
 # URL prefix for admin media -- CSS, JavaScript and images. Make sure to use a
 # trailing slash.
 # Examples: "http://foo.com/media/", "/media/".
