Added ability to cycle through a list of hostnames for the covers.
Former-commit-id: 2ad9ca31efd961d3ccdf28b81b1d0f78c5bf1ef3
Former-commit-id: 7ea08d38e846841ad0904ad0a27c929a2329aff0
Former-commit-id: d473ec6c9653930f23cbea0ab5ea636d1e793a96
Former-commit-id: 9c2943cce358ae5094ad510e063428b8f1b6de32
Former-commit-id: 0d172e8f74d5cb8e551df72741244fe9b7983849

--- a/src/podiobooks/settings_local.template
+++ b/src/podiobooks/settings_local.template
@@ -39,7 +39,7 @@ MEDIA_AWARDS = MEDIA_ROOT + "/awards/"
 MEDIA_URL = '/media/'
 
 # URL that is used to fetch the covers for the titles
-COVER_MEDIA_URL = MEDIA_URL
+COVER_MEDIA_URLS = (MEDIA_URL,)
 
 # URL prefix for admin media -- CSS, JavaScript and images. Make sure to use a
 # trailing slash.
