--- a/src/podiobooks/settings_local.template
+++ b/src/podiobooks/settings_local.template
@@ -113,3 +113,8 @@ SEARCH_PROVIDER = 'DEFAULT'
 # SPHINX_SERVER = 'localhost'
 # SPHINX_PORT = 3312
 # SPHINX_API_VERSION = 0x116
+
+# LIBSYN
+LIBSYN_USER = ''
+LIBSYN_KEY = ''
+LIBSYN_NETWORK_SLUG = ''
