Mostly working awards slideshow for detail page.

--- a/src/podiobooks/settings_local.template
+++ b/src/podiobooks/settings_local.template
@@ -30,8 +30,8 @@ ADMINS = (
 # Absolute path to the directory that holds media.
 # Example: "/home/media/media.lawrence.com/"
 MEDIA_ROOT = PROJECT_PATH + '/media/'
-MEDIA_COVERS = MEDIA_ROOT + "/images/covers/"
-MEDIA_AWARDS = MEDIA_ROOT + "/images/awards/"
+MEDIA_COVERS = "images/covers/"
+MEDIA_AWARDS = "images/awards/"
 
 # URL that handles the media served from MEDIA_ROOT. Make sure to use a
 # trailing slash if there is a path component (optional in other cases).
