Added new modules - django-links, django-memcache-status, django-tagging.
Former-commit-id: e70a2509e4f36c18d5515936fcab05687fb472ac
Former-commit-id: 1706d8c9faa8fa6464b194a3d654efbf4cb8d281
Former-commit-id: dffa40a3a336f15bee50bf5a15c1497a31c2a04f
Former-commit-id: 9bd32dc0d1c2c774cf3265b3d72119f2a9f9f030
Former-commit-id: fe22f0bcaacd1af9018d36ce9903b0f919ce8f5e
Former-commit-id: 64f5c8d1d4224e77ee4beda6f3b1ca82a617e0a5

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -5,7 +5,10 @@ parts = python
 develop = .
 eggs =	podiobooks
 		django-authopenid
+		django-links
+		django-memcache-status
 		django-sphinx
+		django-tagging
 		django-tinymce
 		docutils
 		feedparser
