--- a/buildout.cfg
+++ b/buildout.cfg
@@ -5,6 +5,7 @@ parts = python
 develop = .
 eggs =	podiobooks
 		django-authopenid
+		django-faq
 		django-links
 		django-memcache-status
 		django-sphinx
