--- a/src/podiobooks/settings_local.template
+++ b/src/podiobooks/settings_local.template
@@ -14,7 +14,7 @@ PROJECT_PATH = os.path.abspath(os.path.dirname(__file__))
 DEBUG = True
 TEMPLATE_DEBUG = DEBUG
 
-# TEMPLATE_THEMES = ('tim1', 'legacy',)
+TEMPLATE_THEMES = ('pb2',)
 
 # Cache Settings
 # CACHE_BACKEND = 'memcached://127.0.0.1:11211/'
@@ -30,8 +30,8 @@ ADMINS = (
 # Absolute path to the directory that holds media.
 # Example: "/home/media/media.lawrence.com/"
 MEDIA_ROOT = PROJECT_PATH + '/media/'
-MEDIA_COVERS = "images/covers/"
-MEDIA_AWARDS = "images/awards/"
+MEDIA_COVERS = 'images/covers/'
+MEDIA_AWARDS = 'images/awards/'
 
 # URL that handles the media served from MEDIA_ROOT. Make sure to use a
 # trailing slash if there is a path component (optional in other cases).
@@ -103,6 +103,13 @@ LOCAL_MIDDLEWARE_CLASSES = None
 LOCAL_TEMPLATE_CONTEXT_PROCESSORS = None
 
 ##### PB2 Custom Variables Below Here #######
+
+# LOGGING
+import logging
+logging.basicConfig(level=logging.DEBUG,
+    format='%(asctime)s %(levelname)s %(message)s',
+    filename=os.path.join(PROJECT_PATH, 'django.log'),
+    filemode='a+')
 
 ### Search
 
