Trying new search module.

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -6,6 +6,7 @@ develop = .
 eggs =	podiobooks
 		django-authopenid
 		django-faq
+		django-haystack
 		django-memcache-status
 		django-sphinx
 		django-tagging
@@ -16,6 +17,7 @@ eggs =	podiobooks
 		python-memcached
 		python-openid
 		twitter
+		whoosh
 
 [python]
 recipe = zc.recipe.egg
