Added haystack settings.
Former-commit-id: f7297b0121fbce2ac8060aa946cef0302c44b0d3
Former-commit-id: 809b4a55d502ba00d3e056715366bccfc50edd86
Former-commit-id: f0c847597e438f2aa778999a982fac7138c6a98f
Former-commit-id: 64659e7c0b494acbb7c45235ba3533e720922191
Former-commit-id: 5db5a2b46771256a1d4e59b65c459679e153e3f2
Former-commit-id: 098241e07bce176a288b008345f92855aca3bb75

--- a/src/podiobooks/settings_local.template
+++ b/src/podiobooks/settings_local.template
@@ -121,6 +121,11 @@ SEARCH_PROVIDER = 'DEFAULT'
 # SPHINX_PORT = 3312
 # SPHINX_API_VERSION = 0x116
 
+# Haystack
+HAYSTACK_SITECONF = 'podiobooks.main.search_sites'
+HAYSTACK_SEARCH_ENGINE = 'whoosh'
+HAYSTACK_WHOOSH_PATH = PROJECT_PATH + '/whoosh/podiobooks_index'
+
 # LIBSYN
 LIBSYN_USER = ''
 LIBSYN_KEY = ''
