More tweaks to get tests to run.
Former-commit-id: 4355d0810722426a65f3d039bcae2ca7b3752e89
Former-commit-id: 9d0e40532168e7d02d167bea7911bfc9690e653a
Former-commit-id: 71accfd41ae5315b64d0b7008002dbdb7801ca74
Former-commit-id: 271851268be4583f375f63e55b5af0a97539cec1
Former-commit-id: 0e8c3850ea4acff6217646acfef6205f478fe06c
Former-commit-id: dfe5bc04f16650f3ac9591f518345cebb78b1f4b

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -36,6 +36,7 @@ project = podiobooks
 projectegg = podiobooks
 settings = settings
 wsgi = true
+test = main
 eggs = ${buildout:eggs}
 extra-paths = ${buildout:directory}/eggs-local/eyeD3.egg
 
