Much happier version of the automated unit tests.
Former-commit-id: ebfd6159dff5dfae2b8fba25450d388347938924
Former-commit-id: bdd60222b0c7d59377347027533841382e2f3328
Former-commit-id: d9501355cca6eeb2dae0812c9b5df102abbd38f1
Former-commit-id: 589c6dfa4fc7f9cbff408b5265a8866c40bcccd2
Former-commit-id: 43bc7cbb10f423ea41ae2decc0679871b79c79dd
Former-commit-id: 83afe204916748ba9305a71b93677114389977f3

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,6 +1,7 @@
 [buildout]
 parts = python
 		podiobooks
+		podiobooks-test
 		pydev
 develop = .
 eggs =	podiobooks
@@ -36,9 +37,18 @@ project = podiobooks
 projectegg = podiobooks
 settings = settings
 wsgi = true
-test = main
 eggs = ${buildout:eggs}
 extra-paths = ${buildout:directory}/eggs-local/eyeD3.egg
+
+[podiobooks-test]
+recipe = djangorecipe
+version = 1.1.1
+project = ${podiobooks:project}
+projectegg = ${podiobooks:projectegg}
+settings = settings_test
+test = main
+eggs = ${podiobooks:eggs}
+extra-paths = ${podiobooks:extra-paths}
 
 [pydev]
 recipe = pb.recipes.pydev
