--- a/buildout.cfg
+++ b/buildout.cfg
@@ -3,6 +3,7 @@ parts = python
 		podiobooks
 		podiobooks-test
 		pydev
+		pylint
 develop = .
 eggs =	podiobooks
 		django-authopenid
@@ -54,3 +55,11 @@ extra-paths = ${podiobooks:extra-paths}
 recipe = pb.recipes.pydev
 eggs = ${buildout:eggs}
 extra_paths = ${podiobooks:extra-paths}
+
+[pylint]
+recipe = zc.recipe.egg
+eggs =	${buildout:eggs}
+		pylint
+entry-points = pylint=pylint.lint:Run
+arguments = sys.argv[1:]
+extra-paths = ${buildout:directory}/eggs-local/eyeD3.egg
