Added coverage egg.

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -6,10 +6,12 @@ parts = python
 		pylint
 develop = .
 eggs =	podiobooks
+		coverage
 		django-authopenid
 		django-faq
 		django-haystack
 		django-memcache-status
+		django-nose
 		django-sphinx
 		django-tagging
 		django-tinymce
