Added coverage back in to run for xml report.

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -4,6 +4,7 @@ parts = python
 		podiobooks-test
 		pydev
 		pylint
+		coverage
 develop = .
 eggs =	podiobooks
 		coverage
@@ -65,3 +66,9 @@ eggs =	${buildout:eggs}
 entry-points = pylint=pylint.lint:Run
 arguments = sys.argv[1:]
 extra-paths = ${buildout:directory}/eggs-local/eyeD3.egg
+
+[coverage]
+recipe = zc.recipe.egg:scripts
+eggs =	${podiobooks-test:eggs}
+		coverage
+extra-paths = ${podiobooks-test:extra-paths}
