Trying out nosexcoverage to fix coverage generation.
Former-commit-id: 655f3cedd5f72e31cb0c1267e473bb0ade5ce84c
Former-commit-id: f84bae39f2654ef56716dab7ca1f78130045d0da
Former-commit-id: 1534c665287b75a7b233fdeae33e6e646680fc9a
Former-commit-id: 8ed6eeb6b13a25be8eefaacf50d215f538adbd6c
Former-commit-id: a5bd13491bfefeaf81d481e13f581ad623948d44
Former-commit-id: a641bd97289e768fb3f4443dce651f365ba4617b

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -8,6 +8,8 @@ parts = python
 develop = .
 eggs =	podiobooks
 		coverage
+		nose
+		nosexcover
 		django-authopenid
 		django-faq
 		django-haystack
