Added django_debug_toolbar info.

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -6,9 +6,8 @@ parts = python
 		pylint
 develop = .
 eggs =	podiobooks
-		nose
-		nosexcover
 		django-authopenid
+		django-debug-toolbar
 		django-faq
 		django-haystack
 		django-memcache-status
@@ -20,6 +19,8 @@ eggs =	podiobooks
 		docutils
 		feedparser
 		httplib2
+		nose
+		nosexcover
 		python-memcached
 		python-openid
 		twitter
@@ -44,6 +45,7 @@ settings = settings
 wsgi = true
 eggs = ${buildout:eggs}
 extra-paths = ${buildout:directory}/eggs-local/eyeD3.egg
+			  ${buildout:directory}/eggs-local/django-registration
 
 [podiobooks-test]
 recipe = djangorecipe
