Added disqus comments as a trial.
Former-commit-id: 990031a427c07442b02105cca3c44e23184cfd24
Former-commit-id: 3ed887fb46374c707416ab39e5c754a6803e329b
Former-commit-id: 29026c1e1e64f55d37cdfa3db2191200d39133b8
Former-commit-id: 90ab0f0872711961c515e0dd11de95fcec58e24f
Former-commit-id: f4a93e6510254b95ffc669eab1ed629ba174b486
Former-commit-id: c450f889013610324c7a2458719a339920ffdcb7

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -8,6 +8,7 @@ develop = .
 eggs =	podiobooks
 		django-authopenid
 		django-debug-toolbar
+		django-disqus
 		django-faq
 		django-nose
 		django-ratings
