Added extra_paths to the python group.
Former-commit-id: 426045f1530c09a52e305cee319e89559a7d8972
Former-commit-id: acd4bf3c6aa21ab94cbf1b4d158f6c391270ad67
Former-commit-id: 126a1e86bc4ee095d76a25811d60387033709b85
Former-commit-id: 7e82bb37bedc0404af3d103d81fcf9d115703dac
Former-commit-id: 6f322bc96fcfc61f5c13474e7ce21f9672b311fe
Former-commit-id: c11f891124d8a3d877b19a2c9697614f05090e52

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -28,11 +28,8 @@ eggs =	podiobooks
 recipe = zc.recipe.egg
 interpreter = python
 eggs = ${buildout:eggs}
-
-[PIL]
-recipe = zc.recipe.egg:custom
-egg = PIL
-find-links = http://dist.repoze.org/
+extra_paths = ${podiobooks:extra-paths}
+			  ${buildout:directory}/dbscripts
 
 [podiobooks]
 recipe = djangorecipe
@@ -65,4 +62,4 @@ eggs =	${buildout:eggs}
 		pylint
 entry-points = pylint=pylint.lint:Run
 arguments = sys.argv[1:]
-extra-paths = ${buildout:directory}/eggs-local/eyeD3.egg
+extra_paths = ${podiobooks:extra-paths}
