Added automated bootstrap.py updater to buildout.cfg, uploading newest bootstrap.py, fixed extra-paths everywhere.
Former-commit-id: 439fdb4346dd4a52367b8a64d2d074d0bba841b6
Former-commit-id: fcbe9b1aefdd4e36ccaaeb7eb14cbf4c649bdcb7
Former-commit-id: 1e5e578fa35d2fd811aa2288cf68ce0cd005111a
Former-commit-id: 9a207ae052884db83fcd49e460da06be0842360c
Former-commit-id: 7aeb406bc81b04845a9dec3cbb422f1724374e3e
Former-commit-id: fd1e69685b4ea71e62c8763a537f4019edcc5618

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,5 +1,6 @@
 [buildout]
-parts = python
+parts = bootstrap
+		python
 		podiobooks
 		podiobooks-test
 		pydev
@@ -24,11 +25,14 @@ eggs =	podiobooks
 		python-openid
 		twitter
 
+[bootstrap]
+recipe = collective.recipe.bootstrap
+
 [python]
 recipe = zc.recipe.egg
 interpreter = python
 eggs = ${buildout:eggs}
-extra_paths = ${podiobooks:extra-paths}
+extra-paths = ${podiobooks:extra-paths}
 			  ${buildout:directory}/dbscripts
 
 [podiobooks]
@@ -54,7 +58,7 @@ extra-paths = ${podiobooks:extra-paths}
 [pydev]
 recipe = pb.recipes.pydev
 eggs = ${buildout:eggs}
-extra_paths = ${podiobooks:extra-paths}
+extra-paths = ${podiobooks:extra-paths}
 
 [pylint]
 recipe = zc.recipe.egg
@@ -62,4 +66,4 @@ eggs =	${buildout:eggs}
 		pylint
 entry-points = pylint=pylint.lint:Run
 arguments = sys.argv[1:]
-extra_paths = ${podiobooks:extra-paths}
+extra-paths = ${podiobooks:extra-paths}
