Updated query to include contributors.
Former-commit-id: 9d4ae9e118750085ef6f76d270da89164ac7fc9f
Former-commit-id: e6cdd20df9a9b432de2b48ef7ce36d92d1810363
Former-commit-id: c61a6758d383e3c70f1cd37f07b963c7b602404d
Former-commit-id: 024f6544bce6d5d1b72413b993b7dfdb35a24dc6
Former-commit-id: 5bac138e24391ebf59e44a2678f5793c690a1173
Former-commit-id: 457bf9de3e2237fa63c498943bc5de4832703506

--- a/devscripts/sphinx/sphinx.conf
+++ b/devscripts/sphinx/sphinx.conf
@@ -4,24 +4,32 @@
 
 source pb2 
 {
-	type					= mysql
+	type					= pgsql
 
 	sql_host				= localhost
 	sql_user				= pb2
 	sql_pass				= pb2
 	sql_db					= pb2
-	sql_port				= 3306
+	sql_port				= 5432
 
 	sql_query				= \
-		SELECT id, name, description, date_created, date_updated,\
-			is_adult, is_complete\
-		FROM main_title
-
+		SELECT \
+main_title.id, \
+main_title.name,\
+main_title.description,\
+main_contributor.display_name,\
+main_title.date_created,\
+main_title.date_updated,\
+main_title.is_adult,\
+main_title.is_complete \
+FROM main_title, main_contributor, main_titlecontributor \
+WHERE \
+main_title.id = main_titlecontributor.title_id \
+AND main_titlecontributor.contributor_id = main_contributor.id
 	sql_attr_timestamp			= date_created
 	sql_attr_timestamp			= date_updated
 	sql_attr_bool				= is_adult
 	sql_attr_bool				= is_complete
-
 	sql_query_info				= SELECT * FROM main_title WHERE id=$id
 }
 
