--- a/buildout.cfg
+++ b/buildout.cfg
@@ -8,6 +8,7 @@ parts = bootstrap
 develop = .
 eggs =	podiobooks
 		django-authopenid
+		django-avatar
 		django-debug-toolbar
 		django-disqus
 		django-faq
