Added Sphinx documentation module and South database migration module.
Former-commit-id: e7db439afd5921c503a2b8c730c9e6d6b24eccf7
Former-commit-id: 292b5ca3a5d0cc6bacdd7f076a3562d4d8dde537
Former-commit-id: 293a19bfabec8e81f5f7cf82cfe2071bb6e6b943
Former-commit-id: 804780ce076d70010de12f82ff506f4ed153a4de
Former-commit-id: 09269777c09df9b1a629cbe2b1a599e068bc1d87
Former-commit-id: 282ad625a67f15b09ba988a4a66263c50ba11812

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -25,6 +25,8 @@ eggs =	podiobooks
 		python-memcached
 		python-openid
 		twitter
+		south
+		sphinx
 
 [bootstrap]
 recipe = collective.recipe.bootstrap
