--- a/buildout.cfg
+++ b/buildout.cfg
@@ -20,11 +20,13 @@ eggs =	podiobooks
 		docutils
 		feedparser
 		httplib2
+		mysql-python
 		nose
-		nosexcover
+		PIL
+		psycopg2==2.3.2
 		python-memcached
 		python-openid
-		twitter<1.4
+		twitter
 		south
 		sphinx
 
@@ -40,7 +42,7 @@ extra-paths = ${podiobooks:extra-paths}
 
 [podiobooks]
 recipe = djangorecipe
-version = 1.2.1
+version = 1.2.4
 project = podiobooks
 projectegg = podiobooks
 settings = settings
@@ -61,7 +63,7 @@ extra-paths = ${podiobooks:extra-paths}
 [pydev]
 recipe = pb.recipes.pydev
 eggs = ${buildout:eggs}
-extra-paths = ${podiobooks:extra-paths}
+extra-paths = ${python:extra-paths}
 
 [pylint]
 recipe = zc.recipe.egg
