Trying buildout-cache.

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,4 +1,5 @@
 [buildout]
+download-cache = ${buildout:directory}/../buildout-cache
 parts = bootstrap
 		python
 		podiobooks
@@ -7,6 +8,7 @@ parts = bootstrap
 		pylint
 develop = .
 eggs =	podiobooks
+		coverage
 		django-authopenid
 		django-avatar
 		django-debug-toolbar
