Puttin back nosexcover - need to determine how to use that with the latest version of coverage.
Former-commit-id: bbdd8684c4fb806c7c7fa766977366bb5fca006a
Former-commit-id: 0f08ae2669a69e25642156ad638d4e771f78fce8
Former-commit-id: 1d29b3d8c13cc825cf56309bf7b16adb44e1aebc
Former-commit-id: 349b7af23e4021225459da6987baa402ce2dd377
Former-commit-id: ded8b97fd8ead04250b50883b3d9d732553892ec
Former-commit-id: c5a95325e557b89f6a31b5691730de6a42b0e756

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -8,7 +8,7 @@ parts = bootstrap
 		pylint
 develop = .
 eggs =	podiobooks
-		coverage
+		coverage==3.3
 		django-authopenid
 		django-avatar
 		django-debug-toolbar
@@ -24,6 +24,7 @@ eggs =	podiobooks
 		httplib2
 		mysql-python
 		nose
+		nosexcover
 		PIL
 		psycopg2==2.3.2
 		python-memcached
