Removed mysql and psycopg from buildout, since they require full local DB support. Need to split buildout into versions that include both/none/each.

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,5 +1,5 @@
+### NOTE: You must manually install on your syste
 [buildout]
-download-cache = ${buildout:directory}/../buildout-cache
 parts = bootstrap
 		python
 		podiobooks
@@ -22,11 +22,8 @@ eggs =	podiobooks
 		docutils
 		feedparser
 		httplib2
-		mysql-python
 		nose
 		nosexcover
-		PIL
-		psycopg2==2.3.2
 		python-memcached
 		python-openid
 		twitter
