Changed from using nosexcover package to generate coverage reports to using nose-cov, which doesn't barf on coverage package, or force it to be installed.  Updated buildout and all the test .launch files to use the new params.

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,4 +1,9 @@
-### NOTE: You must manually install on your syste
+### NOTE: You must manually install on your system databases and python adapters such as:
+### mysql-python
+### psycopg2
+### If you are using PostgreSQL as your main DB, will only need mysql-python to pull live data from PB1 Prod
+### You should also install "PIL" on your system manually.
+### If you are running the code coverage reports locally, you'll need the "coverage" package installed locally as well.
 [buildout]
 parts = bootstrap
 		python
@@ -8,7 +13,6 @@ parts = bootstrap
 		pylint
 develop = .
 eggs =	podiobooks
-		coverage==3.3
 		django-authopenid
 		django-avatar
 		django-debug-toolbar
@@ -23,7 +27,7 @@ eggs =	podiobooks
 		feedparser
 		httplib2
 		nose
-		nosexcover
+		nose-cov
 		python-memcached
 		python-openid
 		twitter
