Updated to use the python-twitter lib instead of the twitter lib, which was barfing under older versions of python.
Former-commit-id: cd293c686fab75c96c58a5a4ad26499364312720
Former-commit-id: ea153e357353394dca34cbcca8ddbe4205feb3df
Former-commit-id: 1fbf7cfa54ebc0b0ad5ad5ecdc2f52fc869c9633
Former-commit-id: b363674f1a727daf0246edd26c4ca3030a3527b6
Former-commit-id: 95ac9273eab5cf3874352dcee8ac4adb7daa4d5a
Former-commit-id: 97906f733feae591bef9fe2dd1e5a41a6c239284

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -28,9 +28,11 @@ eggs =	podiobooks
 		httplib2
 		nose
 		nose-cov
+		oauth2 #for python-twitter
 		python-memcached
 		python-openid
-		twitter
+		python-twitter
+		simplejson #for python-twitter
 		south
 		sphinx
 
