Updated buildout for test to pull Django version number from non-test build.
Former-commit-id: 7f7fb4b7f93a90f35ff481dfa69441c1db4c982c
Former-commit-id: 994a28aa010b7bdd992a146daac9c97fc6c271c3
Former-commit-id: 9a44fe3e1ae724f447afdb1e00b9770c2c492d42
Former-commit-id: e702227b3e86fbd54468b9c1cd4ab34363e377a5
Former-commit-id: ec018844d63c0a57ebff25f79169f3fa516638ac
Former-commit-id: 67dc76604cf14eebc3c8b39b56d9fac5dd3a5ece

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -58,7 +58,7 @@ extra-paths = ${buildout:directory}/eggs-local/eyeD3.egg
 
 [podiobooks-test]
 recipe = djangorecipe
-version = 1.2.1
+version = ${podiobooks:version}
 project = ${podiobooks:project}
 projectegg = ${podiobooks:projectegg}
 settings = settings_test
