--- a/.gitignore
+++ b/.gitignore
@@ -1,27 +1,27 @@
-#git-ls-files --others --exclude-from=.git/info/exclude
 # Lines that start with '#' are comments.
-# For a project mostly in C, the following would be a good set of
-# exclude patterns (uncomment them if you want to use them):
-# *.[oa]
-# *~
-*.pyc
-*.log
-*.pyo
 .coverage
+.DS_Store
 .installed.cfg
+.pydevproject.bak
+.pydevproject
+.settings
+.tmp_*
+.tox
+*.egg
+*.egg-info
+*.log
 bin
+build
+coverage.xml
 develop-eggs
 dist
 downloads
 eggs
-parts
-src/*.egg-info
+js-*_.js
 local_settings.py
-settings_local.py
-.pydevproject.bak
-.DS_Store
-.tmp_*
-.settings
 nosetests.xml
-/coverage.xml
-.pydevproject
+parts
+settings_local.py
+settings_local_test.py
+settings_test_local.py
+style-*_.css
