Removed tinymce, added django_markitup/markdown.
Former-commit-id: b000b59f0590713202a0839bd3185c061c81b2f0
Former-commit-id: 5a49f53022867ca9309d71835922b68bce3664cc
Former-commit-id: 0ad566eb1614f61a9957746cbad6540598053817
Former-commit-id: 3ada38c6f87e772ea21bb6661528ca5375e57292
Former-commit-id: c7a7e8c6d1def42f69c068c17a0e0935b20d4da6
Former-commit-id: 406750f81297af64c8099ba881d9dc385a454ffb

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -22,10 +22,11 @@ eggs =	podiobooks
 		django-ratings
 		django-sphinx
 		django-tagging
-		django-tinymce
+		django-markitup
 		docutils
 		feedparser
 		httplib2
+		markdown
 		nose
 		nose-cov
 		oauth2 #for python-twitter
